--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "vite": "^4.0.0"
     },
     "dependencies": {
+        "apexcharts": "^3.44.0",
         "flowbite-datepicker": "^1.2.2"
     }
 }
